JAMP/microservices/micro-sender/kuberConf/micro-recipient-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: micro-recipient
  name: micro-recipient
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: micro-recipient
  strategy: { }
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/recipient-network: "true"
        io.kompose.service: micro-recipient
    spec:
      containers:
        - image: micro-recipient_img
          name: micro-recipient
          ports:
            - containerPort: 9001
          resources: { }
      restartPolicy: Always
status: { }
