JAMP/microservices/micro-sender/kuberConf/micro-sender-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: micro-sender
  name: micro-sender
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: micro-sender
  strategy: { }
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/sender-network: "true"
        io.kompose.service: micro-sender
    spec:
      containers:
        - image: micro-sender_img
          name: micro-sender
          ports:
            - containerPort: 9000
          resources: { }
      restartPolicy: Always
status: { }
