JAMP/microservices/micro-sender/kuberConf/micro-visualizer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: micro-visualizer
  name: micro-visualizer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: micro-visualizer
  strategy: { }
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/db-network: "true"
        io.kompose.service: micro-visualizer
    spec:
      containers:
        - image: micro-visualizer_img
          name: micro-visualizer
          ports:
            - containerPort: 9005
          resources: { }
      restartPolicy: Always
status: { }
