JAMP/microservices/micro-sender/kuberConf/service-collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: service-collector
  name: service-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: service-collector
  strategy: { }
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/db-network: "true"
        io.kompose.network/recipient-network: "true"
        io.kompose.service: service-collector
    spec:
      containers:
        - image: service-collector_img
          name: service-collector
          ports:
            - containerPort: 9002
          resources: { }
      restartPolicy: Always
status: { }
