JAMP/microservices/micro-sender/kuberConf/micro-recipient-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: micro-recipient
  name: micro-recipient
spec:
  ports:
    - name: "9001"
      port: 9001
      targetPort: 9001
  selector:
    io.kompose.service: micro-recipient
status:
  loadBalancer: { }
