JAMP/microservices/micro-sender/kuberConf/micro-visualizer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: micro-visualizer
  name: micro-visualizer
spec:
  ports:
    - name: "9005"
      port: 9005
      targetPort: 9005
  selector:
    io.kompose.service: micro-visualizer
status:
  loadBalancer: { }
