JAMP/microservices/micro-sender/kuberConf/service-collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: service-collector
  name: service-collector
spec:
  ports:
    - name: "9002"
      port: 9002
      targetPort: 9002
  selector:
    io.kompose.service: service-collector
status:
  loadBalancer: { }
