JAMP/microservices/micro-sender/kuberConf/monitoring-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: monitoring
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/monitoring: "true"
  podSelector:
    matchLabels:
      io.kompose.network/monitoring: "true"
