JAMP/microservices/micro-sender/kuberConf/sender-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: sender-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/sender-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/sender-network: "true"
